behance data and results

--- a/notebooks/wikipaintings results.ipynb
+++ b/notebooks/wikipaintings results.ipynb
@@ -29,26 +29,8 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/configobj.py:145: DeprecationWarning: The compiler package is deprecated and removed in Python 3.x.\n",
-        "  import compiler\n",
-        "WARNING:root:Warning: I cannot import mpi4py. Using a dummpy single noded implementation instead. The program will run in single node mode even if you executed me with mpirun or mpiexec.\n",
-        "\n",
-        "We STRONGLY recommend you to try to install mpi and mpi4py.\n",
-        "\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:mpi4py exception message is: No module named mpi4py\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:decaf.util.pyvml: unable to load the mkl library. Using fallback options.\n"
+        "/Users/karayev/anaconda/lib/python2.7/site-packages/configobj.py:145: DeprecationWarning: The compiler package is deprecated and removed in Python 3.x.\n",
+        "  import compiler\n"
        ]
       }
      ],
@@ -81,13 +63,10 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "/Users/karayev/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
         "\n",
         "  warnings.warn(d.msg, DeprecationWarning)\n",
-        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
-        "\n",
-        "  warnings.warn(d.msg, DeprecationWarning)\n",
-        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
+        "/Users/karayev/anaconda/lib/python2.7/site-packages/pandas/core/config.py:570: DeprecationWarning: height has been deprecated.\n",
         "\n",
         "  warnings.warn(d.msg, DeprecationWarning)\n"
        ]
@@ -96,162 +75,10 @@
        "html": [
         "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
         "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>_id</th>\n",
-        "      <th>data</th>\n",
-        "      <th>features</th>\n",
-        "      <th>num_test</th>\n",
-        "      <th>num_train</th>\n",
-        "      <th>num_val</th>\n",
-        "      <th>quadratic</th>\n",
-        "      <th>results_name</th>\n",
-        "      <th>score_test</th>\n",
-        "      <th>score_val</th>\n",
-        "      <th>task</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td> 526b20719622958641aab77a</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                                       [decaf_fc6]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> False</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['decaf_...</td>\n",
-        "      <td> 0.383014</td>\n",
-        "      <td> 0.595281</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>1</th>\n",
-        "      <td> 526bafe39622958641aab77b</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                                          [mc_bit]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> False</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['mc_bit...</td>\n",
-        "      <td> 0.453180</td>\n",
-        "      <td> 0.728084</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>2</th>\n",
-        "      <td> 5271c7d59622958641af6843</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                                 [decaf_tuned_fc6]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> False</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['decaf_...</td>\n",
-        "      <td> 0.387178</td>\n",
-        "      <td> 0.600663</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3</th>\n",
-        "      <td> 5272512f9622958641af684e</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                      [fusion_wikipaintings_oct25]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td>  None</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['fusion...</td>\n",
-        "      <td> 0.466557</td>\n",
-        "      <td> 0.757390</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td> 5272d9b49622958641b0db67</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                         [decaf_tuned_fc6_flatten]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> False</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['decaf_...</td>\n",
-        "      <td> 0.318274</td>\n",
-        "      <td> 0.715596</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>5</th>\n",
-        "      <td> 5272eb469622958641b1a34a</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>              [decaf_fc6, pascal_mc_for_decaf_fc6]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td>    pd</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['decaf_...</td>\n",
-        "      <td> 0.396138</td>\n",
-        "      <td> 0.619133</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>6</th>\n",
-        "      <td> 527322fb9622958641b1a34d</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td> [fusion_wikipaintings_oct25, pascal_mc_for_fus...</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td>    fp</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['fusion...</td>\n",
-        "      <td> 0.463024</td>\n",
-        "      <td> 0.817788</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>7</th>\n",
-        "      <td> 527345049622958641b1a350</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                              [decaf_tuned_fc6_ud]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td>  None</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['decaf_...</td>\n",
-        "      <td> 0.330074</td>\n",
-        "      <td> 0.505001</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>8</th>\n",
-        "      <td> 527456889622958641b1a352</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                    [mc_bit, pascal_mc_for_mc_bit]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td>    pm</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['mc_bit...</td>\n",
-        "      <td> 0.474003</td>\n",
-        "      <td> 0.690112</td>\n",
-        "      <td> clf</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>9</th>\n",
-        "      <td> 527c71a89622958641b3d7b9</td>\n",
-        "      <td> wikipaintings_style_ALL</td>\n",
-        "      <td>                                  [decaf_imagenet]</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td> 49475</td>\n",
-        "      <td> 16492</td>\n",
-        "      <td>  None</td>\n",
-        "      <td> data_wikipaintings_style_ALL_features_['decaf_...</td>\n",
-        "      <td> 0.282311</td>\n",
-        "      <td> 0.387837</td>\n",
-        "      <td> clf</td>\n",
+        "      <td>Int64Index([], dtype=int64)</td>\n",
+        "      <td>Empty DataFrame</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -259,59 +86,15 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
-        "                        _id                     data  \\\n",
-        "0  526b20719622958641aab77a  wikipaintings_style_ALL   \n",
-        "1  526bafe39622958641aab77b  wikipaintings_style_ALL   \n",
-        "2  5271c7d59622958641af6843  wikipaintings_style_ALL   \n",
-        "3  5272512f9622958641af684e  wikipaintings_style_ALL   \n",
-        "4  5272d9b49622958641b0db67  wikipaintings_style_ALL   \n",
-        "5  5272eb469622958641b1a34a  wikipaintings_style_ALL   \n",
-        "6  527322fb9622958641b1a34d  wikipaintings_style_ALL   \n",
-        "7  527345049622958641b1a350  wikipaintings_style_ALL   \n",
-        "8  527456889622958641b1a352  wikipaintings_style_ALL   \n",
-        "9  527c71a89622958641b3d7b9  wikipaintings_style_ALL   \n",
-        "\n",
-        "                                            features  num_test  num_train  \\\n",
-        "0                                        [decaf_fc6]     16492      49475   \n",
-        "1                                           [mc_bit]     16492      49475   \n",
-        "2                                  [decaf_tuned_fc6]     16492      49475   \n",
-        "3                       [fusion_wikipaintings_oct25]     16492      49475   \n",
-        "4                          [decaf_tuned_fc6_flatten]     16492      49475   \n",
-        "5               [decaf_fc6, pascal_mc_for_decaf_fc6]     16492      49475   \n",
-        "6  [fusion_wikipaintings_oct25, pascal_mc_for_fus...     16492      49475   \n",
-        "7                               [decaf_tuned_fc6_ud]     16492      49475   \n",
-        "8                     [mc_bit, pascal_mc_for_mc_bit]     16492      49475   \n",
-        "9                                   [decaf_imagenet]     16492      49475   \n",
-        "\n",
-        "   num_val quadratic                                       results_name  \\\n",
-        "0    16492     False  data_wikipaintings_style_ALL_features_['decaf_...   \n",
-        "1    16492     False  data_wikipaintings_style_ALL_features_['mc_bit...   \n",
-        "2    16492     False  data_wikipaintings_style_ALL_features_['decaf_...   \n",
-        "3    16492      None  data_wikipaintings_style_ALL_features_['fusion...   \n",
-        "4    16492     False  data_wikipaintings_style_ALL_features_['decaf_...   \n",
-        "5    16492        pd  data_wikipaintings_style_ALL_features_['decaf_...   \n",
-        "6    16492        fp  data_wikipaintings_style_ALL_features_['fusion...   \n",
-        "7    16492      None  data_wikipaintings_style_ALL_features_['decaf_...   \n",
-        "8    16492        pm  data_wikipaintings_style_ALL_features_['mc_bit...   \n",
-        "9    16492      None  data_wikipaintings_style_ALL_features_['decaf_...   \n",
-        "\n",
-        "   score_test  score_val task  \n",
-        "0    0.383014   0.595281  clf  \n",
-        "1    0.453180   0.728084  clf  \n",
-        "2    0.387178   0.600663  clf  \n",
-        "3    0.466557   0.757390  clf  \n",
-        "4    0.318274   0.715596  clf  \n",
-        "5    0.396138   0.619133  clf  \n",
-        "6    0.463024   0.817788  clf  \n",
-        "7    0.330074   0.505001  clf  \n",
-        "8    0.474003   0.690112  clf  \n",
-        "9    0.282311   0.387837  clf  "
+        "Empty DataFrame\n",
+        "Columns: []\n",
+        "Index: []"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
