mongodb client minor fix

--- a/notebooks/flickr_dataset.ipynb
+++ b/notebooks/flickr_dataset.ipynb
@@ -13,10 +13,8 @@
      "input": [
       "%load_ext autoreload\n",
       "%autoreload 2\n",
-      "\n",
-      "import aphrodite\n",
-      "import aphrodite.flickr\n",
-      "import pandas as pd"
+      "import pandas as pd\n",
+      "import vislab.datasets"
      ],
      "language": "python",
      "metadata": {},
@@ -30,13 +28,13 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "client = aphrodite.util.get_mongodb_client()\n",
+      "client = vislab.util.get_mongodb_client()\n",
       "collection = client['flickr']['Ethereal']\n",
       "doc = collection.find_one()\n",
       "doc"
@@ -45,26 +43,18 @@
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "{u'_id': ObjectId('521b24a31288dd2537e3942f'),\n",
-        " u'farm': 9,\n",
-        " u'id': u'8649016885',\n",
-        " u'image_id': u'f_8649016885',\n",
-        " u'isfamily': 0,\n",
-        " u'isfriend': 0,\n",
-        " u'ispublic': 1,\n",
-        " u'owner': u'84018718@N07',\n",
-        " u'rejected': False,\n",
-        " u'secret': u'bb4316cea1',\n",
-        " u'server': u'8533',\n",
-        " u'title': u''}"
+       "ename": "Exception",
+       "evalue": "Need a MongoDB server running on localhost, port 27666",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-5-3c5ad306178e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvislab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_mongodb_client\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcollection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'flickr'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Ethereal'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcollection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/karayev/work/ln_packages/vislab/util.pyc\u001b[0m in \u001b[0;36mget_mongodb_client\u001b[0;34m(port)\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mpymongo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConnectionFailure\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m         raise Exception(\n\u001b[0;32m---> 58\u001b[0;31m             \"Need a MongoDB server running on {}, port {}\".format(host, port))\n\u001b[0m\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mException\u001b[0m: Need a MongoDB server running on localhost, port 27666"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
