Misc. related changes

--- a/image_style_experiments/flickr results.ipynb
+++ b/image_style_experiments/flickr results.ipynb
@@ -14,7 +14,6 @@
       "%load_ext autoreload\n",
       "%autoreload 2\n",
       "import os\n",
-      "import aphrodite.results\n",
       "import sklearn.metrics\n",
       "import pandas as pd\n",
       "import vislab.datasets\n",
@@ -25,14 +24,42 @@
      "outputs": [
       {
        "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      },
+      {
+       "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "/Users/sergeyk/anaconda/lib/python2.7/site-packages/configobj.py:145: DeprecationWarning: The compiler package is deprecated and removed in Python 3.x.\n",
+        "/usr/local/Cellar/python/2.7.6/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/configobj.py:145: DeprecationWarning: The compiler package is deprecated and removed in Python 3.x.\n",
         "  import compiler\n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pd.__version__"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "'0.13.1'"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -43,7 +70,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
