found thresholds for best flickr style accuracies

--- a/image_style_experiments/pinterest_results.ipynb
+++ b/image_style_experiments/pinterest_results.ipynb
@@ -176,7 +176,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "results_dirname = vislab.util.makedirs(os.path.expanduser('~/work/vislab-git/data/results_mar23'))\n",
+      "results_dirname = vislab.util.makedirs(vislab.config['paths']['shared_data'] + '/results_mar23')\n",
       "df, preds_panel = vislab._results.load_pred_results(\n",
       "    'pinterest_80k_mar23', results_dirname,\n",
       "    multiclass=True, force=True)\n",
@@ -294,7 +294,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "results_dirname = vislab.util.makedirs(os.path.expanduser('~/work/vislab-git/data/results_mar23'))\n",
+      "results_dirname = vislab.util.makedirs(vislab.config['paths']['shared_data'] + '/results_mar23')\n",
       "df, flickr_preds_panel = vislab._results.load_pred_results(\n",
       "    'flickr_on_pinterest_80k_mar23', results_dirname,\n",
       "    multiclass=True, force=True)\n",
