--- a/image_style_experiments/wikipaintings results.ipynb
+++ b/image_style_experiments/wikipaintings results.ipynb
@@ -144,7 +144,7 @@
      "input": [
       "results_dirname = vislab.util.makedirs(vislab.config['paths']['shared_data'] + '/results')\n",
       "results_df, preds_panel = vislab._results.load_pred_results(\n",
-      "    'wikipaintings_oct25', results_dirname, multiclass=True, force=False)\n",
+      "    'wikipaintings_mar23', results_dirname, multiclass=True, force=False)\n",
       "pred_prefix = 'pred'\n",
       "print preds_panel.minor_axis"
      ],
@@ -155,28 +155,248 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Results in collection wikipaintings_oct25: 0\n"
+        "Results in collection wikipaintings_mar23: 2\n",
+        "Index([u'caffe_fc7 None vw', u'noise None vw'], dtype='object')"
        ]
       },
       {
-       "ename": "KeyError",
-       "evalue": "u'no item named features'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-11-3aa89d9dd6c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mresults_dirname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvislab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvislab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'paths'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'shared_data'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/results'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m results_df, preds_panel = vislab._results.load_pred_results(\n\u001b[0;32m----> 3\u001b[0;31m     'wikipaintings_oct25', results_dirname, multiclass=True, force=False)\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mpred_prefix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'pred'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mpreds_panel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mminor_axis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/sergeyk/work/ln_packages/vislab/_results.pyc\u001b[0m in \u001b[0;36mload_pred_results\u001b[0;34m(collection_name, cache_dirname, multiclass, force)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m# Make the features list hashable for filtering/joins.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m     \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features_str'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m','\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0;31m# We need a unique representation of the predictor settings.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1656\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1657\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1658\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1659\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1660\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_getitem_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m_getitem_column\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1663\u001b[0m         \u001b[0;31m# get column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1664\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_unique\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1665\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_item_cache\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1666\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1667\u001b[0m         \u001b[0;31m# duplicate columns & possible reduce dimensionaility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36m_get_item_cache\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m   1003\u001b[0m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1004\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1005\u001b[0;31m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1006\u001b[0m             \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_box_item_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1007\u001b[0m             \u001b[0mcache\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/internals.pyc\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m   2871\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_for_nan_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2872\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2873\u001b[0;31m             \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mblock\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_find_block\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2874\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2875\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/internals.pyc\u001b[0m in \u001b[0;36m_find_block\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m   3183\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3184\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_find_block\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3185\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_have\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3186\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mblock\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblocks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3187\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mblock\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/sergeyk/anaconda/lib/python2.7/site-packages/pandas/core/internals.pyc\u001b[0m in \u001b[0;36m_check_have\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m   3190\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_check_have\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3191\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3192\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'no item named %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpprint_thing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3193\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3194\u001b[0m     def reindex_axis(self, new_axis, indexer=None, method=None, axis=0,\n",
-        "\u001b[0;31mKeyError\u001b[0m: u'no item named features'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "collection_name = 'wikipaintings_mar23'\n",
+      "cache_filename = '{}/{}_thresholds_and_accs.h5'.format(results_dirname, collection_name)\n",
+      "threshold_df, acc_df = vislab.results.learn_accuracy_thresholds_for_preds_panel(\n",
+      "    preds_panel, cache_filename)\n",
+      "del acc_df['noise None vw']\n",
+      "acc_df.columns = ['MC-bit accuracy']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "acc_df.index = [_.replace('style_', '').replace('_', ' ') for _ in acc_df.index]\n",
+      "acc_df.sort('MC-bit accuracy')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>MC-bit accuracy</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Symbolism</th>\n",
+        "      <td> 0.712406</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Expressionism</th>\n",
+        "      <td> 0.720398</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Art Nouveau (Modern)</th>\n",
+        "      <td> 0.727749</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Nave Art (Primitivism)</th>\n",
+        "      <td> 0.729508</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Surrealism</th>\n",
+        "      <td> 0.744432</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Post-Impressionism</th>\n",
+        "      <td> 0.745107</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Romanticism</th>\n",
+        "      <td> 0.758666</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Realism</th>\n",
+        "      <td> 0.758855</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Magic Realism</th>\n",
+        "      <td> 0.785494</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Neoclassicism</th>\n",
+        "      <td> 0.801835</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Abstract Expressionism</th>\n",
+        "      <td> 0.812500</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Baroque</th>\n",
+        "      <td> 0.814592</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Art Informel</th>\n",
+        "      <td> 0.820988</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Impressionism</th>\n",
+        "      <td> 0.821556</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Northern Renaissance</th>\n",
+        "      <td> 0.823251</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>High Renaissance</th>\n",
+        "      <td> 0.829096</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Mannerism (Late Renaissance)</th>\n",
+        "      <td> 0.830409</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Pop Art</th>\n",
+        "      <td> 0.833333</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Early Renaissance</th>\n",
+        "      <td> 0.846910</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Abstract Art</th>\n",
+        "      <td> 0.851032</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Cubism</th>\n",
+        "      <td> 0.868550</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Rococo</th>\n",
+        "      <td> 0.873348</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Ukiyo-e</th>\n",
+        "      <td> 0.931818</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Minimalism</th>\n",
+        "      <td> 0.942197</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Color Field Painting</th>\n",
+        "      <td> 0.955801</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>25 rows \u00d7 1 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "                              MC-bit accuracy\n",
+        "Symbolism                            0.712406\n",
+        "Expressionism                        0.720398\n",
+        "Art Nouveau (Modern)                 0.727749\n",
+        "Nave Art (Primitivism)               0.729508\n",
+        "Surrealism                           0.744432\n",
+        "Post-Impressionism                   0.745107\n",
+        "Romanticism                          0.758666\n",
+        "Realism                              0.758855\n",
+        "Magic Realism                        0.785494\n",
+        "Neoclassicism                        0.801835\n",
+        "Abstract Expressionism               0.812500\n",
+        "Baroque                              0.814592\n",
+        "Art Informel                         0.820988\n",
+        "Impressionism                        0.821556\n",
+        "Northern Renaissance                 0.823251\n",
+        "High Renaissance                     0.829096\n",
+        "Mannerism (Late Renaissance)         0.830409\n",
+        "Pop Art                              0.833333\n",
+        "Early Renaissance                    0.846910\n",
+        "Abstract Art                         0.851032\n",
+        "Cubism                               0.868550\n",
+        "Rococo                               0.873348\n",
+        "Ukiyo-e                              0.931818\n",
+        "Minimalism                           0.942197\n",
+        "Color Field Painting                 0.955801\n",
+        "\n",
+        "[25 rows x 1 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print acc_df.sort('MC-bit accuracy').to_latex()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\\begin{tabular}{lr}\n",
+        "\\toprule\n",
+        "{} &  MC-bit accuracy \\\\\n",
+        "\\midrule\n",
+        "Symbolism                    &         0.712406 \\\\\n",
+        "Expressionism                &         0.720398 \\\\\n",
+        "Art Nouveau (Modern)         &         0.727749 \\\\\n",
+        "Nave Art (Primitivism)       &         0.729508 \\\\\n",
+        "Surrealism                   &         0.744432 \\\\\n",
+        "Post-Impressionism           &         0.745107 \\\\\n",
+        "Romanticism                  &         0.758666 \\\\\n",
+        "Realism                      &         0.758855 \\\\\n",
+        "Magic Realism                &         0.785494 \\\\\n",
+        "Neoclassicism                &         0.801835 \\\\\n",
+        "Abstract Expressionism       &         0.812500 \\\\\n",
+        "Baroque                      &         0.814592 \\\\\n",
+        "Art Informel                 &         0.820988 \\\\\n",
+        "Impressionism                &         0.821556 \\\\\n",
+        "Northern Renaissance         &         0.823251 \\\\\n",
+        "High Renaissance             &         0.829096 \\\\\n",
+        "Mannerism (Late Renaissance) &         0.830409 \\\\\n",
+        "Pop Art                      &         0.833333 \\\\\n",
+        "Early Renaissance            &         0.846910 \\\\\n",
+        "Abstract Art                 &         0.851032 \\\\\n",
+        "Cubism                       &         0.868550 \\\\\n",
+        "Rococo                       &         0.873348 \\\\\n",
+        "Ukiyo-e                      &         0.931818 \\\\\n",
+        "Minimalism                   &         0.942197 \\\\\n",
+        "Color Field Painting         &         0.955801 \\\\\n",
+        "\\bottomrule\n",
+        "\\end{tabular}\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
